--- a/serverless.yml
+++ b/serverless.yml
@@ -1,14 +1,17 @@
 service: serverless-test
-frameworkVersion: "2"
+# frameworkVersion: "2"
 useDotenv: true
 
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: development
+  stage: dev
   lambdaHashingVersion: '20201221'
   region: ap-southeast-2
   timeout: 900
+  apiGateway:
+    apiKeys:
+      - 'weather-api-key'
   environment:
     ALLOWS_INSECURE_SSL_CERTIFICATES: true
 
@@ -17,8 +20,19 @@ plugins:
   - serverless-plugin-typescript
   - serverless-offline
 
+custom:
+  serverless-offline:
+    httpsProtocol: ${env:DEV_CERTS, false}
+    httpPort: 4000
+    apiKey: ${env:API_KEY}
 
 functions:
   weatherApi:
     handler: src/handlers/weather.handler
-    
+    description: return weather by given postcode and country code
+    events:
+      - http:
+          path: weather
+          method: get
+          cors: true # <-- CORS!
+          private: true
